--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+@keyframes example {
+  0%   {opacity: 0;}
+  100% {opacity: 1;}
+}
+
 .App {
   text-align: center;
   font-family: 'Roboto';
 }
 
 nav{
+  align-items: center;
   font-family: 'Roboto';
   border-bottom: 1px solid lightgrey;
   display: flex;
@@ -20,6 +26,7 @@ a{
 }
 
 .nav-home{
+  margin-left: 0.5em;
   font-size: 1.7em;
   font-weight: 300;
   letter-spacing: .2em;
@@ -48,6 +55,8 @@ header{
   align-items: center;
   justify-content: center;
   height: 20em;
+  animation-name: example;
+  animation-duration: 1s;
 }
 
 .header-container{
@@ -76,6 +85,9 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  animation-name: example;
+  animation-duration: 1s;
+
 }
 
 .project-row{
@@ -180,6 +192,8 @@ p{
   display: flex;
   justify-content: center;
   margin-top: 1em;
+  animation-name: example;
+  animation-duration: 1s;
 }
 
 .about-pic{
@@ -221,14 +235,15 @@ p{
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation-name: example;
+  animation-duration: 1s;
 }
 
 .contact-block{
   display: flex;
   justify-content: flex-start;
-  width: 30em;
   align-items: center;
-  margin: 1em 3em 1em 7em;
+  margin: 1em 0em 2.5em 0em;
 }
 
 .contact-link:hover{
@@ -247,6 +262,8 @@ h1{
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation-name: example;
+  animation-duration: 1s;
 }
 
 .phone {
@@ -327,13 +344,13 @@ h1{
 }
 
 .computer{
-display: flex;
-flex-direction: column;
-justify-content: center;
-width: 90%;
-height: 45em;
-align-items: center;
-margin: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  height: 45em;
+  align-items: center;
+  margin: 1em;
 }
 
 .comp-base{
@@ -428,4 +445,90 @@ margin: 1em;
   font-size: 1.5em;
   font-weight: bolder;
   color: darkgrey;
+}
+
+.scroll{
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  margin: 10em 0em 3em 0em;
+}
+
+.scroll-links{
+  color: grey;
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+.scroll-arrow{
+  font-size: 3em;
+}
+
+.scroll-links:hover{
+  text-transform: lowercase;
+  cursor: pointer;
+  font-size: 1.2em;
+}
+
+.hamburger-icon{
+  width: 2.5em;
+  height: 2.5em;
+  border: 1px solid grey;
+  border-radius: 0.5em;
+  margin-right: 0.5em;
+  display: none;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: center;
+}
+
+.hamburger-links{
+  display: none;
+}
+
+@media only screen and (max-width: 850px) {
+
+nav{
+  padding: 1.2em;
+}
+
+.all-nav-links{
+  display: none;
+}
+
+.hamburger-icon, .hamburger-links{
+  display: block;
+}
+
+.hamburger-links{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-right: 0.5em;
+}
+
+.hamburger-nav-links {
+  font-size: 1em;
+  margin: 0.5em;
+}
+
+.hamburger-nav-links:hover{
+  text-transform: lowercase;
+}
+
+.nav-home{
+  font-size: 1.3em;
+}
+
+h1{
+  margin: 2em;
+}
+
+.contact-icon {
+  border-radius: 0.5em;
+  width: 2em;
+  height: 2em;
+  margin-right: 2em;
+}
+
 }
