--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   justify-content: space-between;
 }
 
-nav{
+.nav{
   align-items: center;
   font-family: 'Roboto';
   border-bottom: 1px solid lightgrey;
@@ -480,7 +480,7 @@ h1{
   height: 2.5em;
   border: 1px solid grey;
   border-radius: 0.5em;
-  margin-right: 0.5em;
+  margin: 0.5em;
   display: none;
   background-repeat: no-repeat;
   background-size: 80%;
@@ -548,7 +548,7 @@ h1{
 
 @media only screen and (max-width: 850px) {
 
-nav{
+.nav{
   padding: 1.2em;
 }
 
@@ -564,7 +564,7 @@ nav{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-right: 0.5em;
+  margin: 0.5em;
 }
 
 .hamburger-nav-links {
